--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -143,9 +143,9 @@
 <header class="navbar pcoded-header navbar-expand-lg navbar-light">
     <div class="m-header">
         <a class="mobile-menu" id="mobile-collapse1" href="javascript:"><span></span></a>
-        <a href="index.html" class="b-brand">
+        <a href="{% url 'landing:home' %}" class="b-brand">
             <div class="b-bg">
-                <i class="feather icon-trending-up"></i>
+                <i class="feather icon-heart"></i>
             </div>
             <span class="b-title">Долголетие</span>
         </a>
