--- a/app/templates/app/quiz/list.html
+++ b/app/templates/app/quiz/list.html
@@ -28,7 +28,7 @@
     {% if quizzes.exists %}
         <div class="row">
             {% for quiz in quizzes %}
-                <div class="col-3">
+                <div class="col-12 col-lg-3">
                     <div class="card shadow-1">
                         <div class="card-header text-center">
                             <div class="bg-info position-absolute align-self-center d-flex justify-content-center align-items-center text-white text-center"
