--- a/app/templates/app/flat/home.html
+++ b/app/templates/app/flat/home.html
@@ -73,33 +73,13 @@
         }
 
         @media screen and (max-width: 720px) {
-            .section-about {
-                padding: 10px;
-                font-size: 0.8em !important;
-                height: auto;
-            }
-
-            .section-about p {
-                padding: 20px;
-            }
-
-            .section-about h1 {
-                font-size: 1em !important;
-                color: #2f8f21;
-                margin-bottom: 0;
-            }
-
-
-            .card-about {
-                opacity: 90%;
-            }
-
             .project-item-cards {
                 flex-wrap: wrap;
+            {#REFACTOR#} padding: 0;
             }
 
             .project-item-card {
-                width: 100%;
+            {#REFACTOR#}{#width: 100%;#}
             }
 
             .contact-forest {
