--- a/app/templates/app/quiz/quiz.html
+++ b/app/templates/app/quiz/quiz.html
@@ -84,7 +84,11 @@
             {#            {% if 0 %}#}
             {% if question.display_type == 'select' %}
                 <div class="mb-3">
-                    <label for="">{{ question.text }}</label>
+                    <label for="">
+                        {{ question.text }}<br>
+                        {% if question.is_multiple %}
+                            <span class="text-danger">(Вопрос с выбором нескольких вариантов)</span>{% endif %}
+                    </label>
                     <select name="{{ question.id }}" id="" class="form-control select"
                             {% if question.is_multiple %}multiple{% endif %}>
                         {% if not question.is_required %}
@@ -97,7 +101,11 @@
                 </div>
             {% elif question.display_type == 'switch' %}
                 <div class="mb-3">
-                    <div>{{ question.text }}</div>
+                    <div>
+                        {{ question.text }}<br>
+                        {% if question.is_multiple %}
+                            <span class="text-danger">(Вопрос с выбором нескольких вариантов)</span>{% endif %}
+                    </div>
                     <div class="mt-2 row justify-content-center">
                         {% for answer in question.answers.all %}
                             <input type="{% if question.is_multiple %}checkbox{% else %}radio{% endif %}"
