added new fonts, recommendation

--- a/app/templates/app/subscription/plans.html
+++ b/app/templates/app/subscription/plans.html
@@ -37,7 +37,7 @@
                         299 рублей / месяц
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'app:activate_subscription' %}?type=monthly" class="btn btn-warning w-100">
+                        <a href="{% url 'app:activate_subscription' %}?type=monthly" target="_blank" class="btn btn-warning w-100">
                             Подписка
                         </a>
                     </div>
@@ -52,7 +52,7 @@
                         2990 рублей / месяц <span class="text-danger">(-17%)</span>
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'app:activate_subscription' %}?type=annual" class="btn btn-warning w-100">
+                        <a href="{% url 'app:activate_subscription' %}?type=annual" target="_blank" class="btn btn-warning w-100">
                             Подписка
                         </a>
                     </div>
