--- a/app/templates/app/subscription/plans.html
+++ b/app/templates/app/subscription/plans.html
@@ -37,7 +37,8 @@
                         299 рублей / месяц
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'app:activate_subscription' %}?type=monthly" target="_blank" class="btn btn-warning w-100">
+                        <a href="{% url 'app:activate_subscription' %}?type=monthly" target="_blank"
+                           class="btn btn-warning w-100">
                             Подписка
                         </a>
                     </div>
@@ -52,7 +53,8 @@
                         2990 рублей / месяц <span class="text-danger">(-17%)</span>
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'app:activate_subscription' %}?type=annual" target="_blank" class="btn btn-warning w-100">
+                        <a href="{% url 'app:activate_subscription' %}?type=annual" target="_blank"
+                           class="btn btn-warning w-100">
                             Подписка
                         </a>
                     </div>
@@ -71,10 +73,14 @@
                             </div>
                             <div class="card-body">
                                 Дата подписки: {{ subscription.start_datetime|date:'d-m-Y' }}<br>
-                                Дата окончания: {{ subscription.end_datetime|date:'d-m-Y' }}
+                                Дата окончания: {{ subscription.end_datetime|date:'d-m-Y' }}<br>
+                                <hr>
+                                <br>
+                                ID оплаты: {{ subscription.payment.yookassa_id }}
                             </div>
                             <div class="card-footer">
-                                <a href="{% url 'app:remove_subscription' subscription.id %}" class="btn btn-outline-danger w-100">
+                                <a href="{% url 'app:remove_subscription' subscription.id %}"
+                                   class="btn btn-outline-danger w-100">
                                     Отменить
                                 </a>
                             </div>
