add footer and new mail

--- a/app/templates/app/quiz/quiz.html
+++ b/app/templates/app/quiz/quiz.html
@@ -58,18 +58,18 @@
             <div class="col-4">
                 <label for="">Возраст</label>
                 <input type="number" class="form-control" value=""
-                       placeholder="..лет" name="current_age">
+                       placeholder="..лет" name="current_age" required>
             </div>
             <div class="col-4">
                 <label for="">Рост</label>
                 <input type="number" class="form-control" value=""
-                       placeholder="..см" name="height">
+                       placeholder="..см" name="height" required>
             </div>
 
             <div class="col-4">
                 <label for="">Вес</label>
                 <input type="number" class="form-control" value=""
-                       placeholder="..кг" name="weight">
+                       placeholder="..кг" name="weight" required>
             </div>
         </div>
         <div class="mb-3">
